--- a/Mix/branches/MultiCert/Makefile.in
+++ b/Mix/branches/MultiCert/Makefile.in
@@ -81,7 +81,8 @@ am_libproxytest_a_OBJECTS = CAAbstractControlChannel.$(OBJEXT) \
 	CALocalProxy.$(OBJEXT) CALogPacketStats.$(OBJEXT) \
 	CAMiddleMix.$(OBJEXT) CAMiddleMixChannelList.$(OBJEXT) \
 	CAMix.$(OBJEXT) CAMixWithReplayDB.$(OBJEXT) CAMsg.$(OBJEXT) \
-	CAMutex.$(OBJEXT) CAMuxSocket.$(OBJEXT) CAPriceInfo.$(OBJEXT) \
+	CAMultiSignature.$(OBJEXT) CAMutex.$(OBJEXT) \
+	CAMuxSocket.$(OBJEXT) CAPriceInfo.$(OBJEXT) \
 	CAPerformanceServer.$(OBJEXT) CAPool.$(OBJEXT) \
 	CAQueue.$(OBJEXT) CAReplayControlChannel.$(OBJEXT) \
 	CAReplayCtrlChannelMsgProc.$(OBJEXT) CASemaphore.$(OBJEXT) \
@@ -280,6 +281,7 @@ libproxytest_a_SOURCES = CAAbstractControlChannel.cpp\
 		    CAMix.cpp \
 		    CAMixWithReplayDB.cpp\
 		    CAMsg.cpp \
+			CAMultiSignature.cpp \
 		    CAMutex.cpp\
 		    CAMuxSocket.cpp \
 		    CAPriceInfo.cpp \
@@ -457,6 +459,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMix.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMixWithReplayDB.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMsg.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMultiSignature.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMutex.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAMuxSocket.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CAPerformanceServer.Po@am__quote@
@@ -935,6 +938,7 @@ uninstall-am: uninstall-sbinPROGRAMS
 		    CAMix.hpp \
 		    CAMixWithReplayDB.hpp\
 		    CAMsg.hpp \
+			CAMultiSignature.hpp \
 		    CAMutex.hpp\
 		    CAMuxSocket.hpp \
 		    CAPerformanceServer.hpp \
