--- a/configure.in
+++ b/configure.in
@@ -287,7 +287,7 @@ if test "x$USE_EPOLL" != "x0" ; then
 	[	
 	    AC_RUN_IFELSE([AC_LANG_PROGRAM([[#include "sys/epoll.h"]],[[int handle;handle=epoll_create(1);if(handle==-1)exit(-1);]])],
 		[
-		    AC_DEFINE(HAVE_EPOLL,1,[Define if your OS support the epoll() syscall])
+		    AC_DEFINE([HAVE_EPOLL],[1],[Define if your OS support the epoll() syscall])
 		],[],[echo "skip epoll run test because of cross compiling"])
 		],[])
 fi
@@ -333,7 +333,9 @@ AC_CHECK_SIZEOF(signed long)
 AC_CHECK_SIZEOF(unsigned long long)
 AC_CHECK_SIZEOF(__uint64_t)
 
-
+dnl Check Endian
+AC_C_BIGENDIAN([AC_DEFINE([BYTE_ORDER_BIG_ENDIAN],,[Define if you run the code on a big endian machine])], [AC_DEFINE([BYTE_ORDER_LITTLE_ENDIAN],,[Define if you run the code on a little endian machine])])
+dnl AC_C_BIGENDIAN ( [AC_DEFINE([BYTE_ORDER_BIG_ENDIAN],,[Define if you run the code on a big endian machine])], [AC_DEFINE([BYTE_ORDER_LITTLE_ENDIAN],,[Define if you run the code on a little endian machine])] ,,)
 
 dnl Checks for libraries.
 
@@ -655,6 +657,15 @@ AC_ARG_ENABLE(dataretentionlog,
 	]
 )
 
+AC_ARG_ENABLE(new-flow-control,
+	AS_HELP_STRING([--enable-new-flow-control],[Enable new flow control protocol]),
+	[
+	    if test "x$enableval" != "xno" ; then
+		CFLAGS="$CFLAGS -DNEW_FLOW_CONTROL"
+		CXXFLAGS="$CXXFLAGS -DNEW_FLOW_CONTROL"
+	    fi
+	]
+)
 
 CRIME=""
 AC_ARG_ENABLE(crime-detection,
