--- a/configure.in
+++ b/configure.in
@@ -163,7 +163,7 @@ AC_ARG_ENABLE(bandwidth-limitation,
 )
 BANDWIDTH_LIMIT_THROUGHPUT=""
 AC_ARG_ENABLE(bandwidth-limitation-throughput,
-	AS_HELP_STRING([--enable-bandwidth-throughput=LIMITATION_THROUGHPUT],
+	AS_HELP_STRING([--enable-bandwidth-limitation-throughput=LIMITATION_THROUGHPUT],
 			[Specify if to build with bandwith limitation and optionally the limit in kByte/s of each communication channel]),
 	[
 		if test "x$enableval" != "xno" ; then
@@ -663,6 +663,27 @@ AC_ARG_ENABLE(new-flow-control,
 	    if test "x$enableval" != "xno" ; then
 		CFLAGS="$CFLAGS -DNEW_FLOW_CONTROL"
 		CXXFLAGS="$CXXFLAGS -DNEW_FLOW_CONTROL"
+	    fi
+	]
+)
+
+AC_ARG_ENABLE(new-channel-encryption,
+	AS_HELP_STRING([--enable-new-channel-encryption],[Enable enhanced channel encryption]),
+	[
+	    if test "x$enableval" != "xno" ; then
+		CFLAGS="$CFLAGS -DNEW_CHANNEL_ENCRYPTION"
+		CXXFLAGS="$CXXFLAGS -DNEW_CHANNEL_ENCRYPTION"
+	    fi
+	]
+)
+
+AC_ARG_ENABLE(google-cpuprofiler,
+	AS_HELP_STRING([--enable-google-cpuprofiler],[Enable CPU profiling using Googles Perftools]),
+	[
+	    if test "x$enableval" != "xno" ; then
+		CFLAGS="$CFLAGS -DENABLE_GPERFTOOLS_CPU_PROFILER"
+		CXXFLAGS="$CXXFLAGS -DENABLE_GPERFTOOLS_CPU_PROFILER"
+		LIBS="$LIBS -lprofiler"
 	    fi
 	]
 )
