--- a/config.h.in
+++ b/config.h.in
@@ -21,6 +21,9 @@
    */
 #undef HAVE_ALLOCA_H
 
+/* Define to 1 if you have the `atoll' function. */
+#undef HAVE_ATOLL
+
 /* Define if your OS support the epoll() syscall */
 #undef HAVE_EPOLL
 
@@ -108,6 +111,9 @@
 
 /* Define to 1 if you have the <string.h> header file. */
 #undef HAVE_STRING_H
+
+/* Define to 1 if you have the `strtoull' function. */
+#undef HAVE_STRTOULL
 
 /* Define to 1 if you have the <sys/epoll.h> header file. */
 #undef HAVE_SYS_EPOLL_H
