--- a/Mix/trunk/configure.in
+++ b/Mix/trunk/configure.in
@@ -272,7 +272,7 @@ dnl Checks for library functions.
 AC_FUNC_ALLOCA
 AC_CHECK_FUNCS([strerror])
 AC_CHECK_FUNCS([vsnprintf])
-AC_CHECK_FUNCS([snprintf])
+AC_CHECK_FUNCS([snprintf],[], [AC_MSG_ERROR([function snprintf is not available])])
 AC_CHECK_FUNCS([fstat64])
 AC_CHECK_FUNCS([poll])
 AC_CHECK_FUNCS([pthread_mutex_init])
@@ -280,6 +280,8 @@ AC_CHECK_FUNCS([pthread_cond_init])
 AC_CHECK_FUNCS([sem_init])
 AC_CHECK_FUNCS([sbrk])
 AC_CHECK_FUNCS([mallinfo])
+AC_CHECK_FUNCS([atoll])
+AC_CHECK_FUNCS([strtoull])
 
 dnl even if epoll exist it may be unfunctional...
 if test "x$USE_EPOLL" != "x0" ; then
