--- a/Mix/trunk/configure.in
+++ b/Mix/trunk/configure.in
@@ -150,30 +150,31 @@ AC_ARG_ENABLE(pool,
 dnl delay channels ??
 BANDWIDTH_LIMIT=""
 AC_ARG_ENABLE(bandwidth-limitation,
-	AS_HELP_STRING([--enable-bandwidth-limitation=LIMITATION_START],
-			[Specify if to build with bandwith limitation and optionally the number of bytes which are transferred without any limitation]),
+	AS_HELP_STRING([--enable-bandwidth-limitation],
+			[Specify if to build with last mix bandwidth limitation. The limitation parameters can be specified in the mix configuration file.]),
 	[
 		if test "x$enableval" != "xno" ; then
 		    BANDWIDTH_LIMIT="-DDELAY_CHANNELS"
-		    if test "x$enableval" != "xyes" ; then	
-			BANDWIDTH_LIMIT="$BANDWIDTH_LIMIT -DDELAY_CHANNEL_TRAFFIC=$enableval"
-		    fi	
+dnl		    if test "x$enableval" != "xyes" ; then	
+dnl			BANDWIDTH_LIMIT="$BANDWIDTH_LIMIT -DDELAY_CHANNEL_TRAFFIC=$enableval"
+dnl		    fi	
 		fi
 	]
 )
-BANDWIDTH_LIMIT_THROUGHPUT=""
-AC_ARG_ENABLE(bandwidth-limitation-throughput,
-	AS_HELP_STRING([--enable-bandwidth-limitation-throughput=LIMITATION_THROUGHPUT],
-			[Specify if to build with bandwith limitation and optionally the limit in kByte/s of each communication channel]),
-	[
-		if test "x$enableval" != "xno" ; then
-		    BANDWIDTH_LIMIT_THROUGHPUT="-DDELAY_CHANNELS"
-		    if test "x$enableval" != "xyes" ; then	
-			BANDWIDTH_LIMIT_THROUGHPUT="$BANDWIDTH_LIMIT_THROUGHPUT -DDELAY_CHANNEL_KBYTE_PER_SECOND=$enableval"
-		    fi	
-		fi
-	]
-)
+
+dnl BANDWIDTH_LIMIT_THROUGHPUT=""
+dnl AC_ARG_ENABLE(bandwidth-limitation-throughput,
+dnl 	AS_HELP_STRING([--enable-bandwidth-limitation-throughput=LIMITATION_THROUGHPUT],
+dnl 			[Specify if to build with bandwidth limitation and optionally the limit in kByte/s of each communication channel]),
+dnl 	[
+dnl 		if test "x$enableval" != "xno" ; then
+dnl 		    BANDWIDTH_LIMIT_THROUGHPUT="-DDELAY_CHANNELS"
+dnl 		    if test "x$enableval" != "xyes" ; then	
+dnl 			BANDWIDTH_LIMIT_THROUGHPUT="$BANDWIDTH_LIMIT_THROUGHPUT -DDELAY_CHANNEL_KBYTE_PER_SECOND=$enableval"
+dnl 		    fi	
+dnl 		fi
+dnl 	]
+dnl )
 
 dnl payment ??
 PAYMENT=""
@@ -191,7 +192,7 @@ dnl delay users ??
 DELAY_USERS=""
 AC_ARG_ENABLE(user-bandwidth-limitation,
 	AS_HELP_STRING([--enable-user-bandwidth-limitation],
-			[Specify if to build with bandwith limitation for users. The limitation parameters can be specified in the mix configuration file.]),
+			[Specify if to build with bandwith limitation for users (first mix). The limitation parameters can be specified in the mix configuration file.]),
 	[
 		if test "x$enableval" != "xno" ; then
 		    DELAY_USERS="-DDELAY_USERS"
@@ -469,13 +470,12 @@ for xmldir in "" $tryxmlincludedir ; do
 				AC_MSG_RESULT([found in $xmldir])
 				found_xmldir=1
 				break;
-			],[
-				],[
-		        if test -f "$xmldir/xercesc/util/XMLString.hpp"; then
-			  found_xmldir=1
-			  break;
-                        fi
-			])
+			],[if test -f "$xmldir/xercesc/util/XMLString.hpp"; then
+			  	AC_MSG_RESULT([found in $xmldir])
+			  	found_xmldir=1
+			  	break;
+              fi
+			],[])
 done
 if test -z "$found_xmldir"; then
 	AC_MSG_ERROR([Xerces-C includes NOT found - please use --with-xml-include])
