--- a/config.h.in
+++ b/config.h.in
@@ -112,6 +112,9 @@
 /* Define to 1 if you have the <string.h> header file. */
 #undef HAVE_STRING_H
 
+/* Define to 1 if you have the `strnstr' function. */
+#undef HAVE_STRNSTR
+
 /* Define to 1 if you have the `strtoull' function. */
 #undef HAVE_STRTOULL
 
